--- a/index.html
+++ b/index.html
@@ -3,203 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Билеты на Моргенштерна</title>
-    <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/entrance-test/lesson-1/task-1/fonts.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Номера домов</title>
+    <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/entrance-test/lesson-1/task-4/fonts.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="page">
-    <section class="tickets">
-      <section class="tickets__container">
-        <article class="ticket tickets__item">
-          <div class="ticket__top">
-            <div class="ticket__image"></div>
-            <div class="ticket__description">
-              <h2 class="ticket__title">Morgenshtern</h2>
-              <div class="ticket__data">
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Имя:</p>
-                  <p class="ticket__data-text ticket__data-text_type_name">
-                    Саша
-                  </p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Дата и время:</p>
-                  <p class="ticket__data-text">01.09.2021, 18.00</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Возраст:</p>
-                  <p class="ticket__data-text ticket__data-text_type_age">19</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Локация:</p>
-                  <p class="ticket__data-text">Юбилейный</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-top.svg"  class="ticket__cutline" alt="" />
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-bottom.svg" class="ticket__cutline" alt=""/>
-          <div class="ticket__bottom">
-            <img src="https://code.s3.yandex.net/web-code/entrance-test/qr.svg" alt="" class="ticket__qr" />
-            <p class="ticket__qr-text">
-              Просканируйте QR-код на входе в концертный зал
-            </p>
-          </div>
-        </article>
-        <article class="ticket tickets__item">
-          <div class="ticket__top">
-            <div class="ticket__image"></div>
-            <div class="ticket__description">
-              <h2 class="ticket__title">Morgenshtern</h2>
-              <div class="ticket__data">
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Имя:</p>
-                  <p class="ticket__data-text ticket__data-text_type_name">
-                    Катя
-                  </p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Дата и время:</p>
-                  <p class="ticket__data-text">01.09.2021, 18.00</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Возраст:</p>
-                  <p class="ticket__data-text ticket__data-text_type_age">21</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Локация:</p>
-                  <p class="ticket__data-text">Юбилейный</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-top.svg"  class="ticket__cutline" alt="" />
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-bottom.svg" class="ticket__cutline" alt=""/>
-          <div class="ticket__bottom">
-            <img src="https://code.s3.yandex.net/web-code/entrance-test/qr.svg" alt="" class="ticket__qr" />
-            <p class="ticket__qr-text">
-              Просканируйте QR-код на входе в концертный зал
-            </p>
-          </div>
-        </article>
-        <article class="ticket tickets__item">
-          <div class="ticket__top">
-            <div class="ticket__image"></div>
-            <div class="ticket__description">
-              <h2 class="ticket__title">Morgenshtern</h2>
-              <div class="ticket__data">
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Имя:</p>
-                  <p class="ticket__data-text ticket__data-text_type_name">
-                    Миша
-                  </p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Дата и время:</p>
-                  <p class="ticket__data-text">01.09.2021, 18.00</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Возраст:</p>
-                  <p class="ticket__data-text ticket__data-text_type_age">17</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Локация:</p>
-                  <p class="ticket__data-text">Юбилейный</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-top.svg"  class="ticket__cutline" alt="" />
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-bottom.svg" class="ticket__cutline" alt=""/>
-          <div class="ticket__bottom">
-            <img src="https://code.s3.yandex.net/web-code/entrance-test/qr.svg" alt="" class="ticket__qr" />
-            <p class="ticket__qr-text">
-              Просканируйте QR-код на входе в концертный зал
-            </p>
-          </div>
-        </article>
-        <article class="ticket tickets__item">
-          <div class="ticket__top">
-            <div class="ticket__image"></div>
-            <div class="ticket__description">
-              <h2 class="ticket__title">Morgenshtern</h2>
-              <div class="ticket__data">
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Имя:</p>
-                  <p class="ticket__data-text ticket__data-text_type_name">
-                    Федя
-                  </p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Дата и время:</p>
-                  <p class="ticket__data-text">01.09.2021, 18.00</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Возраст:</p>
-                  <p class="ticket__data-text ticket__data-text_type_age">23</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Локация:</p>
-                  <p class="ticket__data-text">Юбилейный</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-top.svg"  class="ticket__cutline" alt="" />
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-bottom.svg" class="ticket__cutline" alt=""/>
-          <div class="ticket__bottom">
-            <img src="https://code.s3.yandex.net/web-code/entrance-test/qr.svg" alt="" class="ticket__qr" />
-            <p class="ticket__qr-text">
-              Просканируйте QR-код на входе в концертный зал
-            </p>
-          </div>
-        </article>
-        <article class="ticket tickets__item">
-          <div class="ticket__top">
-            <div class="ticket__image"></div>
-            <div class="ticket__description">
-              <h2 class="ticket__title">Morgenshtern</h2>
-              <div class="ticket__data">
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Имя:</p>
-                  <p class="ticket__data-text ticket__data-text_type_name">
-                    Клава
-                  </p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Дата и время:</p>
-                  <p class="ticket__data-text">01.09.2021, 18.00</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Возраст:</p>
-                  <p class="ticket__data-text ticket__data-text_type_age">22</p>
-                </div>
-                <div class="ticket__data-cell">
-                  <p class="ticket__label">Локация:</p>
-                  <p class="ticket__data-text">Юбилейный</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-top.svg"  class="ticket__cutline" alt="" />
-          <img src="https://code.s3.yandex.net/web-code/entrance-test/seam-part-bottom.svg" class="ticket__cutline" alt=""/>
-          <div class="ticket__bottom">
-            <img src="https://code.s3.yandex.net/web-code/entrance-test/qr.svg" alt="" class="ticket__qr" />
-            <p class="ticket__qr-text">
-              Просканируйте QR-код на входе в концертный зал
-            </p>
-          </div>
-        </article>
-      </section>
-    </section>
-    <div class="modal modal__backdrop">
-      <div class="modal modal__container">
-        <div class="modal__content">
-          <p class="modal__text-key">Средний возраст:</p>
-          <p class="modal__text-value"></p>
-        </div>
+    <div class="page__wrapper">
+      <img src="https://code.s3.yandex.net/web-code/entrance-test/forest-top.svg" alt="" class="forest forest_pos_top" />
+      <div class="marker marker_type_odd marker_pos_top-left">
+        <span class="marker__text">?</span>
       </div>
+      <img
+        src="https://code.s3.yandex.net/web-code/entrance-test/building-4.svg"
+        alt=""
+        class="building building_pos_top-left"
+      />
+      <div class="marker marker_type_odd marker_pos_top-middle">
+        <span class="marker__text">?</span>
+      </div>
+      <img
+        src="https://code.s3.yandex.net/web-code/entrance-test/building-5.svg"
+        alt=""
+        class="building building_pos_top-middle"
+      />
+      <div class="marker marker_type_odd marker_pos_top-right">
+        <span class="marker__text">?</span>
+      </div>
+      <img
+        src="https://code.s3.yandex.net/web-code/entrance-test/building-6.svg"
+        alt=""
+        class="building building_pos_top-right"
+      />
+      <img src="https://code.s3.yandex.net/web-code/entrance-test/road.svg" alt="" class="road" />
+      <div class="marker marker_type_even marker_pos_bottom-left">
+        <span class="marker__text">?</span>
+      </div>
+      <img
+        src="https://code.s3.yandex.net/web-code/entrance-test/building-1.svg"
+        alt=""
+        class="building building_pos_bottom-left"
+      />
+      <div class="marker marker_type_even marker_pos_bottom-middle">
+        <span class="marker__text">?</span>
+      </div>
+      <img
+        src="https://code.s3.yandex.net/web-code/entrance-test/building-2.svg"
+        alt=""
+        class="building building_pos_bottom-middle"
+      />
+      <div class="marker marker_type_even marker_pos_bottom-right">
+        <span class="marker__text">?</span>
+      </div>
+      <img
+        src="https://code.s3.yandex.net/web-code/entrance-test/building-3.svg"
+        alt=""
+        class="building building_pos_bottom-right"
+      />
+      <img
+        src="https://code.s3.yandex.net/web-code/entrance-test/forest-bottom.svg"
+        alt=""
+        class="forest forest_pos_bottom"
+      />
     </div>
-    <script src="js/script.js"></script>
+    <script src="./task.js"></script>
+    <script src="https://code.s3.yandex.net/web-code/entrance-test/lesson-1/task-4/visualizer.js"></script>
   </body>
 </html>
