--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/entrance-test/lesson-1/task-5/fonts.css" /> -->
+    <title>Каталог авто- и мототехники</title>
+    <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/entrance-test/lesson-1/task-6/fonts.css" />
     <link rel="stylesheet" href="./style.css" />
-    <title>var или не var? Вот в чем вопрос</title>
   </head>
   <body class="page">
-    <main class='content'>
-      <p class='content__text'>Введите число:</p>
-      <form class='form' name="formWithInput">
-        <input type='number' class='form__input' min='0'></input>
-      </form>
-      <p class='content__text'>Результат функции:</p>
-      <div class='content__image'>
-        <p class='content__result'>*</p>
-      </div>
-      <p class='content__text' id='congratulation'></p>
+    <header class="header"><h1 class="header__logo">Az-moto</h1></header>
+    <main class="catalog page__catalog">
     </main>
+    <script src="https://code.s3.yandex.net/web-code/entrance-test/lesson-1/task-6/data.js"></script>
     <script src="./task.js"></script>
+    <script src="https://code.s3.yandex.net/web-code/entrance-test/lesson-1/task-6/renderer.js"></script>
   </body>
 </html>
